// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCChoice Editor Node MCChoice component 1`] = `
<div
  className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-correct editor-mc-choice"
>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <button
    className="correct-button"
    onClick={[Function]}
  >
    ✖ Incorrect
  </button>
  <div
    className="children"
  >
    <div />
  </div>
  <button
    className="add-feedback"
    onClick={[Function]}
  >
    Add Feedback
  </button>
</div>
`;

exports[`MCChoice Editor Node MCChoice component correct choice 1`] = `
<div
  className="component obojobo-draft--chunks--mc-assessment--mc-choice is-correct editor-mc-choice"
>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <button
    className="correct-button"
    onClick={[Function]}
  >
    ✔ Correct
  </button>
  <div
    className="children"
  >
    <div />
  </div>
</div>
`;

exports[`MCChoice Editor Node MCChoice component deletes itself 1`] = `"<div class=\\"component obojobo-draft--chunks--mc-assessment--mc-choice is-not-correct editor-mc-choice\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div><button class=\\"correct-button\\">✖ Incorrect</button><div class=\\"children\\"><div></div></div><button class=\\"add-feedback\\">Add Feedback</button></div>"`;
